--- a/src/app/dashboard/solarplant/solarplant.component.html
+++ b/src/app/dashboard/solarplant/solarplant.component.html
@@ -1,21 +1,21 @@
 <div class="dashboard">
-  <mat-card>
-    <mat-card-content>
-      <div class="row">
-        <div class="col-sm-3">
-          <mat-form-field appearance="outline">
-            <mat-label>Data</mat-label>
-            <input matInput [matDatepicker]="picker1" [(ngModel)]="filters.openingDate" (dateChange)="filterData()">
-            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-            <button mat-icon-button matSuffix (click)="cleanStartData()">
-              <mat-icon>close</mat-icon>
-            </button>
-          </mat-form-field>
-        </div>
-      </div>
-    </mat-card-content>
-  </mat-card>
+<!--  <mat-card>-->
+<!--    <mat-card-content>-->
+<!--      <div class="row">-->
+<!--        <div class="col-sm-3">-->
+<!--          <mat-form-field appearance="outline">-->
+<!--            <mat-label>Data</mat-label>-->
+<!--            <input matInput [matDatepicker]="picker1" [(ngModel)]="filters.openingDate" (dateChange)="filterData()">-->
+<!--            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>-->
+<!--            <mat-datepicker #picker1></mat-datepicker>-->
+<!--            <button mat-icon-button matSuffix (click)="cleanStartData()">-->
+<!--              <mat-icon>close</mat-icon>-->
+<!--            </button>-->
+<!--          </mat-form-field>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </mat-card-content>-->
+<!--  </mat-card>-->
   <div class="row">
     <div class="col-sm-12">
       <mat-card>
