--- a/src/app/dashboard/solarplant/solarplant.component.html
+++ b/src/app/dashboard/solarplant/solarplant.component.html
@@ -1,77 +1,77 @@
-<div class="dashboard">
-<!--  <mat-card>-->
-<!--    <mat-card-content>-->
-<!--      <div class="row">-->
-<!--        <div class="col-sm-3">-->
-<!--          <mat-form-field appearance="outline">-->
-<!--            <mat-label>Data</mat-label>-->
-<!--            <input matInput [matDatepicker]="picker1" [(ngModel)]="filters.openingDate" (dateChange)="filterData()">-->
-<!--            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>-->
-<!--            <mat-datepicker #picker1></mat-datepicker>-->
-<!--            <button mat-icon-button matSuffix (click)="cleanStartData()">-->
-<!--              <mat-icon>close</mat-icon>-->
-<!--            </button>-->
-<!--          </mat-form-field>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </mat-card-content>-->
-<!--  </mat-card>-->
-  <div class="row">
+<!-- Área de Filtro -->
+<div class="filtros mb-4">
+  <mat-card>
+    <mat-card-content>
+      <form class="row align-items-end" [formGroup]="filtroForm">
+
+        <!-- Campo de Data -->
+        <div class="col-sm-4">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Data</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="data" [max]="maxDate">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+
+        <!-- Dropdown de Usinas -->
+        <div class="col-sm-4">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Usina</mat-label>
+            <mat-select formControlName="usina">
+              <mat-option *ngFor="let solarplant of solarplants" [value]="solarplant.id">
+                {{ solarplant.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <!-- Botão Consultar -->
+        <div class="col-sm-2">
+          <button mat-flat-button class="btn-consultar custom-blue" (click)="getData()">
+            Consultar
+          </button>
+        </div>
+
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<div class="dashboard mt-4">
+  <!-- Gráficos de Medição (Pie) -->
+  <div class="row" *ngIf="radialCharts.length">
+    <div class="col-sm-6 col-md-3 mb-3" *ngFor="let chart of radialCharts">
+      <mat-card class="text-center py-2 px-1">
+        <div class="mb-2" style="font-weight: 500">{{ chart.title }}</div>
+        <apx-chart
+          [series]="chart.series"
+          [chart]="chart.chart"
+          [labels]="chart.labels"
+          [plotOptions]="chart.plotOptions"
+          [fill]="chart.fill"
+          [grid]="chart.grid">
+        </apx-chart>
+      </mat-card>
+    </div>
+  </div>
+
+
+  <!-- Gráfico de Geração (Line) -->
+  <div class="row" *ngIf="lineChartOptions.series">
     <div class="col-sm-12">
       <mat-card>
         <mat-card-content>
-          <apx-chart [series]="lineChartOptions.series!" [chart]="lineChartOptions.chart!"
-                     [xaxis]="lineChartOptions.xaxis!" [stroke]="lineChartOptions.stroke!"
-                     [dataLabels]="lineChartOptions.dataLabels!" [title]="lineChartOptions.title!"
+          <apx-chart [series]="lineChartOptions.series!"
+                     [chart]="lineChartOptions.chart!"
+                     [xaxis]="lineChartOptions.xaxis!"
+                     [stroke]="lineChartOptions.stroke!"
+                     [dataLabels]="lineChartOptions.dataLabels!"
+                     [title]="lineChartOptions.title!"
                      [tooltip]="lineChartOptions.tooltip!">
           </apx-chart>
         </mat-card-content>
       </mat-card>
     </div>
   </div>
-
-<!--  <div class="row">-->
-<!--    <div class="col-sm-12">-->
-<!--      <mat-card>-->
-<!--        <mat-card-content>-->
-<!--          <table mat-table [dataSource]="dataSourceFilter">-->
-<!--            <ng-container matColumnDef="workOrder">-->
-<!--              <th mat-header-cell *matHeaderCellDef> Ordem de Serviço </th>-->
-<!--              <td mat-cell *matCellDef="let element"> {{ element.workOrder }} </td>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="vehicle">-->
-<!--              <th mat-header-cell *matHeaderCellDef> Veículo </th>-->
-<!--              <td mat-cell *matCellDef="let element"> {{ element.vehicle }} </td>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="status">-->
-<!--              <th mat-header-cell *matHeaderCellDef> Status </th>-->
-<!--              <td mat-cell *matCellDef="let element"> {{ element.statusOs }} </td>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="origin">-->
-<!--              <th mat-header-cell *matHeaderCellDef> Origem </th>-->
-<!--              <td mat-cell *matCellDef="let element"> {{ element.origin }} </td>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="openingDate">-->
-<!--              <th mat-header-cell *matHeaderCellDef> Data de Abertura </th>-->
-<!--              <td mat-cell *matCellDef="let element"> {{ element.openingDate | date:'dd/MM/yyyy' }} </td>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="closingDate">-->
-<!--              <th mat-header-cell *matHeaderCellDef> Data de Fechamento </th>-->
-<!--              <td mat-cell *matCellDef="let element"> {{ element.closingDate | date:'dd/MM/yyyy' }} </td>-->
-<!--            </ng-container>-->
-
-<!--            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
-<!--            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>-->
-<!--          </table>-->
-<!--          <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons>-->
-<!--          </mat-paginator>-->
-<!--        </mat-card-content>-->
-<!--      </mat-card>-->
-<!--    </div>-->
-<!--  </div>-->
 </div>
