--- a/src/app/dashboard/solarplant/solarplant.component.scss
+++ b/src/app/dashboard/solarplant/solarplant.component.scss
@@ -36,3 +36,27 @@
 .table-container {
   margin-top: 30px;
 }
+
+.btn-consultar {
+  height: 56px;
+  padding: 0 24px;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
+.custom-blue {
+  background-color: #42a5f5 !important;  // Azul claro
+  color: white !important;
+  height: 56px;
+  padding: 0 24px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  border-radius: 4px;
+}
+
+.custom-blue:hover {
+  background-color: #1e88e5 !important; // Azul um pouco mais escuro no hover
+}
