--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,31 +1,51 @@
 <div class="login-container">
   <mat-card class="login-card">
     <img src="../../../assets/images/logo.png" alt="Logo" class="logo">
-    <mat-card-content>
-      <mat-form-field appearance="outline">
-        <input matInput placeholder="Usuário" [(ngModel)]="username">
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <input matInput [type]="hide ? 'password' : 'text'" placeholder="Senha" [(ngModel)]="password">
-        <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
-          <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
-        </button>
-      </mat-form-field>
-      <button mat-raised-button *ngIf="!isLoading"
-        style="background-color: #ff5722; color: white; width: 100%; height: 50px; margin-top: 10px;"
-        (click)="confirmaLogin()" [disabled]="isLoading">
-        <ng-container *ngIf="!isLoading; else loadingTemplate">Acessar</ng-container>
-      </button>
-      <button mat-raised-button *ngIf="isLoading"
-        style="background-color: #ffffff; color: rgb(255, 94, 0); width: 100%; height: 50px; margin-top: 10px;" class="loading-button"
-        (click)="confirmaLogin()" [disabled]="isLoading">
-        <ng-container *ngIf="!isLoading; else loadingTemplate">Acessar</ng-container>
-      </button>
-      <ng-template #loadingTemplate>
-        <mat-spinner [diameter]="24" class="spinner-white" style="margin: auto; display: block;" color="warn">
-        </mat-spinner>
-      </ng-template>
-    </mat-card-content>
-  </mat-card>
 
+    <!-- Formulário -->
+    <form (ngSubmit)="confirmaLogin()">
+      <mat-card-content>
+        <mat-form-field appearance="outline">
+          <input
+            matInput
+            placeholder="Usuário"
+            [(ngModel)]="username"
+            name="username"
+            required>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <input
+            matInput
+            [type]="hide ? 'password' : 'text'"
+            placeholder="Senha"
+            [(ngModel)]="password"
+            name="password"
+            required>
+          <button mat-icon-button matSuffix type="button" (click)="togglePasswordVisibility()">
+            <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+          </button>
+        </mat-form-field>
+
+        <!-- Botão de login -->
+        <button
+          mat-raised-button
+          type="submit"
+          style="background-color: #ff5722; color: white; width: 100%; height: 50px; margin-top: 10px;"
+          [disabled]="isLoading">
+          <ng-container *ngIf="!isLoading; else loadingTemplate">Acessar</ng-container>
+        </button>
+
+        <!-- Template de carregamento -->
+        <ng-template #loadingTemplate>
+          <mat-spinner
+            [diameter]="24"
+            class="spinner-white"
+            style="margin: auto; display: block;"
+            color="warn">
+          </mat-spinner>
+        </ng-template>
+      </mat-card-content>
+    </form>
+  </mat-card>
 </div>
